--- a/pis.css
+++ b/pis.css
@@ -918,7 +918,7 @@ footer {
 
   .navbar ul li a {
     font-size: 14px;
-    padding: 8px 3px;  /* vertical = 8px, horizontal = 5px */
+     padding: 8px 3px;
     white-space: nowrap;
   }
 
@@ -942,6 +942,7 @@ footer {
   }
 
 }
+
 
 
 
