--- a/pis.css
+++ b/pis.css
@@ -746,6 +746,7 @@ footer {
 /* ================= TEAM MOBILE ================= */
 @media (max-width: 900px) {
   .team-grid.three,
+  .team-two.two,
   .team-grid.four {
     grid-template-columns: 1fr;
   }
@@ -975,6 +976,7 @@ footer {
     padding: 7px 6px;
   }
 }
+
 
 
 
